# explorador_archivos_naygo

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  THIRD-PARTY-NOTICES.md
.cargo/: config.toml
.github/: SETUP_NOTES.md
.github/workflows/: ci.yml  release.yml
assets/icons/: NOTICE.md  README.md
assets/icons/flat-color/: manifest.json
assets/icons/lucide/: manifest.json
assets/icons/material/: manifest.json
assets/icons/mono/: manifest.json
assets/icons/tabler/: manifest.json
crates/core/: Cargo.toml
crates/core/src/: archive_ops.rs  archive_tree.rs  batch_rename.rs  cancel.rs  changelog.rs  cli.rs  columns.rs  deep_listing.rs  disk.rs  dnd.rs  favorites.rs  filter.rs  footer.rs  format.rs  fs_model.rs  highlight.rs  icon_kind.rs  icon_pack.rs  icon_set.rs  icon_source.rs  keymap.rs  lib.rs  listing.rs  listing_cache.rs  palette.rs  path_segments.rs  preview.rs  recent_dirs.rs  rename.rs  render_hint.rs  search.rs  sizing.rs  sort.rs  tree.rs
crates/core/src/clipboard/: encode.rs  mod.rs  naming.rs
crates/core/src/config/: mod.rs
crates/core/src/i18n/: de.json  detect.rs  en.json  es.json  fr.json  hi.json  it.json  ja.json  ko.json  mod.rs  pt.json  zh.json
crates/core/src/icons/: mod.rs
crates/core/src/ops/: actions.rs  engine.rs  journal.rs  mod.rs  names.rs  plan.rs  plan_async.rs  undo.rs
crates/core/src/theme/: mod.rs  pack.rs
crates/core/src/theme/builtin/: amber-terminal.json  citrus-glow.json  dark-blue.json  dark-teal.json  ember-forge.json  green-on-blue.json  high-contrast.json  light.json  macos.json  neon-retro.json  ocean-midnight.json  plum-dusk.json  polar-graphite.json  solarized-dark.json  winxp.json
crates/core/src/theme/packs/: dark-blue.json  dark-teal.json  high-contrast.json  light.json
crates/core/src/workspace/: file_pane.rs  layout.rs  mod.rs  nav_history.rs  template.rs
crates/core/tests/: flujos_ops.rs
crates/platform/: Cargo.toml
crates/platform/src/: autostart.rs  clipboard.rs  context_menu.rs  device_watch.rs  dir_watch.rs  dnd.rs  drive_space.rs  drives.rs  drop_target.rs  eject.rs  global_hotkey.rs  lib.rs  locale.rs  open.rs  time.rs  trash.rs  window.rs  window_geometry.rs
crates/proto-slint/: Cargo.toml  build.rs
crates/proto-slint/src/: main.rs
crates/proto-slint/ui/: app.slint
crates/ui/: Cargo.toml  app.rc  build.rs
crates/ui-slint/: Cargo.toml  build.rs
crates/ui-slint/src/: bridge.rs  config_ctrl.rs  controller.rs  devices.rs  i18n_keys.rs  icons.rs  keys.rs  listing.rs  logging.rs  main.rs  ops_ctrl.rs  packs.rs  preview.rs  theme_apply.rs  tray.rs  watch.rs  workspace_ctrl.rs
crates/ui-slint/src/workspace_ctrl/: columns.rs  context.rs  favorites.rs  input.rs  layout_panes.rs  listing.rs  mod.rs  navigation.rs  ops.rs  session.rs  templates.rs  tests.rs  tests_simular.rs  tree.rs
crates/ui-slint/ui/: app-window.slint  batch-rename.slint  color-picker.slint  column-menu.slint  command-palette.slint  config-window.slint  context-menu.slint  favorites-panel.slint  file-panel.slint  help.slint  history-panel.slint  i18n.slint  inspector-panel.slint  message-modal.slint  missing-folder.slint  new-folder.slint  op-dialogs.slint  op-file-list-modal.slint  ops-panel.slint  path-bar.slint  preview-panel.slint  search-panel.slint  splash.slint  theme-combo.slint  theme.slint  tree-panel.slint  types.slint
crates/ui/src/: app.rs  batch_rename_dialog.rs  column_menu.rs  dock_translate.rs  docking.rs  input.rs  logging.rs  main.rs  ops_actions.rs  ops_dialogs.rs  ops_panel.rs  pathbar.rs  sort_ui.rs  splash.rs  table_actions.rs  templates_menu.rs  theme_apply.rs  toolbar.rs  tray.rs  tree_actions.rs  typeahead.rs  welcome.rs  widgets.rs
crates/ui/src/icons/: assets.rs  mod.rs
crates/ui/src/panes/: favorites_panel.rs  file_panel.rs  history_panel.rs  inspector_panel.rs  mod.rs  preview_panel.rs  tree_panel.rs
crates/ui/src/settings_window/: about.rs  advanced.rs  appearance.rs  language.rs  mod.rs  panes.rs  preview.rs  shortcuts.rs
docs/: AGREGAR-IDIOMA.md  BUILD.md  DISTRIBUTION.md  GUIA-DE-USUARIO.md  PROTEGER-RAMA-MAIN.md  PRUEBAS.md  iconos-svg-prompts.md
docs/auditoria/: 2026-06-29-auditoria-naygo.md  2026-07-01-linux-decision-analisis.md  2026-07-01-portabilidad-linux.md
docs/migracion-slint/: AUDITORIA-PARIDAD-2026-06-16.md  CONTRATO-PARIDAD-FUNCIONAL.md
docs/superpowers/plans/: 2026-06-05-naygo-fase1-esqueleto-navegable.md  2026-06-05-naygo-fase2a-layout-dinamico.md  2026-06-06-naygo-arbol-directorios.md  2026-06-06-naygo-fase2b-iconos.md  2026-06-06-naygo-fase2c-i-config-i18n.md  2026-06-06-naygo-fase2d-pulidos-listado.md  2026-06-06-naygo-fase2e-columnas-excel.md  2026-06-07-naygo-fase2c-ii-temas-packs.md  2026-06-07-naygo-fase2e-pulido-ux.md  2026-06-07-naygo-ops-a.md  2026-06-08-naygo-atajos-configurables.md  2026-06-08-naygo-ops-b.md  2026-06-08-naygo-paste-inteligente.md  2026-06-08-naygo-shell-a.md  2026-06-08-naygo-sizing.md  2026-06-08-naygo-toolbar-icons.md  2026-06-08-naygo-watcher.md  2026-06-09-naygo-distribucion-instalador.md  2026-06-09-naygo-dnd-pulidos.md  2026-06-09-naygo-multiseleccion.md  2026-06-09-naygo-pulido-bugfix.md  2026-06-09-naygo-shell-b.md  2026-06-12-ajustes-nicolas-lote2.md  2026-06-12-ajustes-nicolas-lote3.md  2026-06-12-modo-bajo-consumo.md  2026-06-13-cache-vista-panel.md  2026-06-13-migracion-slint-fase1.md  2026-06-13-migracion-slint-fase2a.md  2026-06-14-migracion-slint-fase2b.md  2026-06-15-migracion-slint-fase3.md  2026-06-15-migracion-slint-fase4.md  2026-06-15-migracion-slint-fase5.md  2026-06-15-migracion-slint-fase6.md  2026-06-18-historial-carpetas.md  2026-06-18-logging-con-contexto.md  2026-06-18-versionado-changelog.md  2026-06-18-vista-profunda.md  2026-06-19-ci-cd-github-actions.md  2026-06-19-cli-args.md  2026-06-19-modales-tematicos.md  (+13 more)
docs/superpowers/specs/: 2026-06-05-explorador-nucleo-design.md  2026-06-05-naygo-fase2a-layout-dinamico-design.md  (+62 more)
installer/: LEEME.txt  naygo.iss
scripts/: build-release.ps1  bump.ps1  check_i18n_lang.py  create-release.ps1  test-all.ps1
