[package]
name = "naygo-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# Buscar/reemplazar con regex en el batch-rename. MIT/Apache, sin features extra.
regex = { version = "1", default-features = false, features = ["std", "unicode"] }

[dev-dependencies]
tempfile = "3"
