[package]
name = "naygo-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
# Decodificación de imágenes: PNG/JPEG (íconos) + BMP/GIF/WebP/ICO para la vista
# previa liviana (todas puras-Rust, MIT/Apache, sin libs nativas).
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif", "webp", "ico"] }
# Buscar/reemplazar con regex en el batch-rename. MIT/Apache, sin features extra.
regex = { version = "1", default-features = false, features = ["std", "unicode"] }
# Resaltado de sintaxis para la vista previa de código. Gramáticas + temas embebidos por
# defecto, con el backend de regex puro-Rust (`fancy-regex`, sin `onig`/C → sigue portable).
# Licencia MIT.
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

[dev-dependencies]
tempfile = "3"
