[package]
name = "naygo-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "gen_icons"
required-features = ["gen-icons"]

[features]
gen-icons = ["dep:resvg", "dep:usvg", "dep:tiny-skia"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
# Decodificación de imágenes: PNG/JPEG (íconos) + BMP/GIF/WebP/ICO para la vista
# previa liviana (todas puras-Rust, MIT/Apache, sin libs nativas).
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif", "webp", "ico"] }
# Buscar/reemplazar con regex en el batch-rename. MIT/Apache, sin features extra.
regex = { version = "1", default-features = false, features = ["std", "unicode"] }
# Resaltado de sintaxis para la vista previa de código. Gramáticas + temas embebidos por
# defecto, con el backend de regex puro-Rust (`fancy-regex`, sin `onig`/C → sigue portable).
# Licencia MIT.
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
# Empaquetado/desempaquetado de .naygoset. También lo usa el generador de íconos
# (siempre disponible; no requiere feature).
zip = { version = "2", default-features = false, features = ["deflate"] }
# Deps del generador de íconos (solo bajo feature gen-icons, no se incluyen en la app).
resvg = { version = "0.47", optional = true }
usvg = { version = "0.47", optional = true }
tiny-skia = { version = "0.12", optional = true }

[dev-dependencies]
tempfile = "3"
