[package]
name = "naygo-platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Globalization",
    "Win32_Storage_FileSystem",
    "Win32_System_WindowsProgramming",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_Graphics_Gdi",
] }

[dependencies]
naygo-core = { path = "../core" }
tracing = { workspace = true }
