[package]
name = "naygo-platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_Globalization",
    "Win32_Storage_FileSystem",
    "Win32_System_WindowsProgramming",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_System_Com_StructuredStorage",
    "Win32_Graphics_Gdi",
    "Win32_System_Time",
] }
# El macro `#[implement]` genera rutas absolutas `::windows_core::...`; necesitamos el
# crate disponible por ese nombre como dependencia directa.
windows-core = "0.62"

[dependencies]
naygo-core = { path = "../core" }
tracing = { workspace = true }
notify = "8"
notify-debouncer-full = "0.5"

[dev-dependencies]
tempfile = "3"
