# Naygo — capa UI en Slint (render por software, sin GPU). Convive con naygo-ui (egui)
# durante la migracion. Copyright (c) 2026 Nicolás Groth / ISGroth. MIT License.
[package]
name = "naygo-ui-slint"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "naygo-slint"
path = "src/main.rs"

[dependencies]
naygo-core = { path = "../core" }
naygo-platform = { path = "../platform" }
slint = { version = "1.16", default-features = false, features = [
    "compat-1-2",
    "std",
    "backend-winit",
    "renderer-software",
    # Acceso al handle nativo de la ventana (HWND) para el menú contextual del Shell.
    "raw-window-handle-06",
] }
raw-window-handle = "0.6"
# Para serializar el nombre de una Action como clave estable en el editor de atajos.
serde_json = "1"
# Decodificación de imágenes para el panel Preview (mismas familias que la capa egui).
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "bmp",
    "webp",
    "ico",
] }

[build-dependencies]
slint-build = "1.16"

[dev-dependencies]
tempfile = "3"
