# Naygo — capa UI en Slint (render por software, sin GPU). Es la UI oficial: tras la
# migración egui→Slint (F6) se retiró naygo-ui (egui) y este binario heredó el nombre
# `naygo`. Copyright (c) 2026 Nicolás Groth / ISGroth. MIT License.
[package]
name = "naygo-ui-slint"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "naygo"
path = "src/main.rs"

[dependencies]
naygo-core = { path = "../core" }
naygo-platform = { path = "../platform" }
slint = { version = "1.16", default-features = false, features = [
    "compat-1-2",
    "std",
    "backend-winit",
    "renderer-software",
    # Acceso al handle nativo de la ventana (HWND) para el menú contextual del Shell.
    "raw-window-handle-06",
] }
# Backend winit explícito: forzamos el renderizador por SOFTWARE en código (no por variable de
# entorno) para que Naygo nunca dependa de GPU. En VMs/equipos sin GPU el backend acelerado
# producía geometría degenerada (ventana 0x0 → panic en euclid::cast). Mismo crate/versión que
# ya llega de forma transitiva por la feature `backend-winit` de slint (no duplica).
i-slint-backend-winit = "1.16"
raw-window-handle = "0.6"
# Para serializar el nombre de una Action como clave estable en el editor de atajos.
serde_json = "1"
# Import/export de packs (idiomas/temas/config) como .zip + selector de archivo nativo.
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"
rfd = "0.15"
# Ícono en la bandeja del sistema (mismo crate que usaba la capa egui).
tray-icon = "0.24.1"
# Decodificación de imágenes para el panel Preview (mismas familias que la capa egui).
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "bmp",
    "webp",
    "ico",
] }
# Rasterización de SVG para el panel Preview (puro Rust, sin DLLs externas → sigue portable).
# resvg pinta sobre un tiny_skia::Pixmap que convertimos a RGBA, igual que una imagen normal.
# Con features por defecto (incluye `text`) para que los SVG con texto se vean bien.
resvg = "0.47"
usvg = "0.47"
tiny-skia = "0.12"
# Extracción de TEXTO y metadatos de PDF (puro Rust, sin DLLs). Preview liviano: NO renderiza
# la página, solo muestra el texto y el nº de páginas. Mantiene la app portable.
pdf-extract = "0.10"
lopdf = "0.41"

[build-dependencies]
slint-build = "1.16"
# Embebe el ícono y los metadatos (producto/versión/autor) en naygo.exe en Windows.
winresource = "0.1"

[dev-dependencies]
tempfile = "3"
