[package]
name = "naygo-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "naygo"
path = "src/main.rs"

[dependencies]
naygo-core = { path = "../core" }
naygo-platform = { path = "../platform" }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
egui_dock = { workspace = true }
raw-window-handle = "0.6"
image = { version = "0.25", default-features = false, features = ["png"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

[build-dependencies]
embed-resource = "3"
