[package]
name = "naygo-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "naygo"
path = "src/main.rs"

[features]
# Build de diagnóstico: deja la consola abierta en release para ver errores de wgpu/
# abort que cierran la app sin un panic de Rust. NO usar en la build de distribución.
console = []

[dependencies]
naygo-core = { path = "../core" }
naygo-platform = { path = "../platform" }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
egui_dock = { workspace = true }
raw-window-handle = "0.6"
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tray-icon = "0.24.1"

[build-dependencies]
embed-resource = "3"
